--- a/front-mobile/package.json
+++ b/front-mobile/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.57.4",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
@@ -35,7 +36,7 @@
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
