Endpoint vision finalizado

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "form-data": "^4.0.4",
+    "multer": "^2.0.2",
+    "node-fetch": "^2.7.0"
   }
 }
